# fast-p2a

examples/prim32/hardware/: ptoa_wrapper_plain_uncompressed.vhd
examples/prim32/software/cpp/: prim32.cpp
examples/prim64/hardware/: ptoa_wrapper_plain_uncompressed.vhd
examples/prim64/software/cpp/: CMakeLists.txt  prim64.cpp
examples/str/hardware/: ptoa_wrapper_delta_length_uncompressed.vhd
examples/str/software/: gen_input.py
examples/str/software/cpp/: CMakeLists.txt  str.cpp
hardware/vhdl/: ptoa_wrapper.vhd
hardware/vhdl/thrift/: V2MetadataInterpreter.vhd
profiling/cpp-benchmarks/pagecounter/: CMakeLists.txt
profiling/cpp-benchmarks/pagecounter/src/: pagecounter.cpp
profiling/cpp-benchmarks/prim/src/: prim.cpp
profiling/cpp-benchmarks/prim32/src/: prim.cpp
profiling/cpp-benchmarks/prim64/src/: prim.cpp
profiling/cpp-benchmarks/ptoa/: LemireBitUnpacking.cpp  Makefile  SWParquetReader.cpp  SWParquetReader.h  SWParquetReaderDelta.cpp
profiling/cpp-benchmarks/str/src/: str.cpp
profiling/parquet-mr-custom/prelim/: generate_parquetfiles.sh  pom.xml  run.sh
profiling/parquet-mr-custom/prelim/src/main/java/com/ptoa/app/: CustomDeltaValuesWriterFactory.java  CustomPlainValuesWriterFactory.java  CustomV2ValuesWriterFactory.java  Main.java
profiling/utils/: timer.h
software/cpp/test/: CMakeLists.txt  parquet_debugprint.cc  parquetwriter_test.cc
